Dark mode prelim fixes

--- a/src/web/src/assets/dark.scss
+++ b/src/web/src/assets/dark.scss
@@ -223,6 +223,13 @@
     background-color: var(--dark-secondary) !important;
 
   }
+
+  .breadcrumb-item > .router-link-active {
+    color: var(--dark-blue-primary) !important;
+  }
+  .breadcrumb-item.active {
+      color: var(--dark-text-tertiary) !important;
+  }
 }
 
 /*
